--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,11 @@
     <string name="title_section2">Odds</string>
     <string name="title_section3">Friends</string>
     <string name="title_section4">Profile</string>
-
+    <string name="search_title">Search</string>
     <string name="hello_world">Hello world!</string>
-
+    <string name="facebook_app_id">429021823941283</string>
     <string name="action_settings">Settings</string>
+    <string name="action_sign_up">Sign up</string>
+    <string name="email">Email</string>
+    <string name="gender">Gender</string>
 </resources>
